--- a/trunk/Application/Admin/View/default/Public/header.html
+++ b/trunk/Application/Admin/View/default/Public/header.html
@@ -1,55 +1,43 @@
-<div class="container navbar-fixed-top">
-    <div class="top-header">
-        <header class="header white-bg">
-            <div class="row">
-                <div class="col-xs-5">
-                    <a href="{:U('Admin/Index/index')}">
-                        <img src="__IMG__/Common/logo.png"/>
-                    </a>
+<div id="top-bar" class="top-bar">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-12 top-social">
+                <div class="navbar-header">
+                    <a href="#" class="navbar-brand">我的笔记本</a>
                 </div>
-                <div class="col-xs-6">
-                    <!-- START HEADER  NAV -->
-                    <nav class="nav text-right" id="top_menu">
-                        <ul class="nav top-menu">
-                            <!-- START USER LOGIN DROPDOWN  -->
-                            <div class="top-nav text-right">
-                                <ul class="nav pull-right top-menu">
-                                    <li class="dropdown">
-                                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                            <img alt="" src="__CSS__/Admin/img/avatar1_small.jpg">
-                                    <span class="username">
-                                      欢迎您!{$listUser.user_name}
-                                    </span>
-                                            <b class="caret">
-                                            </b>
-                                        </a>
-                                        <ul class="dropdown-menu extended logout">
-                                            <li class="log-arrow-up">
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-cog">
-                                                    </i>
-                                                    设置
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="{:U('Admin/User/logout')}">
-                                                    <i class="fa fa-key">
-                                                    </i>
-                                                    退出
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- END USER LOGIN DROPDOWN  -->
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-xs-1"></div>
-            </div>
-        </header>
+            </div><!--/ Top social end -->
+
+            <div class="col-md-6 col-sm-6 col-xs-12 top-menu ">
+                <notempty name="user_data">
+                    <ul class="unstyled" style="width: 100%;min-width: 260px;margin-right: 10px;">
+                        <!--<li><a href="{:U('Home/User/userCenter')}" target="_self">-->
+                            <!--微信公众号-->
+                        <!--</a></li>-->
+                        <li class="dropdown">
+                            <a href="{:U('Home/User/userCenter')}" target="_self" data-toggle="dropdown">
+                                个人中心
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{:U('Home/User/userCenter')}" target="_self">
+                                    欢迎您!{$user_data['user_name']}
+                                </a></li>
+                                <li><a href="{:U('Home/User/userCenter')}" target="_self">
+                                    我的空间
+                                </a></li>
+                                <li><a href="{:U('Home/User/logout')}" target="_self">
+                                    退出
+                                </a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <else/>
+                    <ul class="unstyled">
+                        <li><a href="{:U('Home/User/login')}" target="_self">您好!欢迎<em class="show-tag">登录</em></a></li>
+                        <!--<li><a href="{:U('Home/User/register')}" target="_self">欢迎<em class="show-tag">注册</em></a></li>-->
+                    </ul>
+                </notempty>
+            </div><!--/ Top menu end -->
+        </div>
     </div>
 </div>
