--- a/trunk/Application/Home/View/default/Public/leftMenu.html
+++ b/trunk/Application/Home/View/default/Public/leftMenu.html
@@ -10,6 +10,8 @@
             <li>
                 <div class="link" name="1"><i class="fa fa-shopping-cart"></i>我的笔记本<i class="fa fa-chevron-down"></i></div>
                 <ul id="opt_1" class="submenu">
+                    <li><a href="{:U('Home/Latest/index','',false)}/cid/2" target="_self">我的最新笔记</a></li>
+                    <div class="sub-link"></div>
                     <li><a href="{:U('Home/Index/index','',false)}/cid/-1" target="_self">我的所有笔记本</a></li>
                     <div class="sub-link"></div>
                     <notempty name="root_category_info">
@@ -26,6 +28,8 @@
             <li>
                 <div class="link" name="2"><i class="fa fa-info"></i>我的收藏夹<i class="fa fa-chevron-down"></i></div>
                 <ul id="opt_2" class="submenu">
+                    <li><a href="{:U('Home/Latest/index','',false)}/cid/4" target="_self">最新的收藏</a></li>
+                    <div class="sub-link"></div>
                     <li><a href="{:U('Home/Favorites/index','',false)}/cid/-1" target="_self">所有的收藏</a></li>
                     <div class="sub-link"></div>
                     <!--<li><a href="#" target="_self">文档2</a></li>-->
