修复notes_articles中encode_contents字符超过65536时被截断的bug 前端显示笔记时，优先从磁盘读，文件不存在则从数据库读取

--- a/trunk/Application/Home/View/default/Article/new_file.html
+++ b/trunk/Application/Home/View/default/Article/new_file.html
@@ -98,8 +98,8 @@
     <block name="script">
         <script type="application/javascript" src="__LIB__/Common/jquery/plugin/jquery.validate.min.js"></script>
         <script type="application/javascript" src="__LIB__/Common/jquery/plugin/messages_zh.js"></script>
-        <script type="application/javascript" src="__JS__/Home/user.js"></script>
-        <script type="application/javascript" src="__JS__/Home/bind.js"></script>
+        <script type="application/javascript" src="__JS__/Home/user.min.js"></script>
+        <script type="application/javascript" src="__JS__/Home/bind.min.js"></script>
         <script src="__UE__/ueditor.config.js"></script>
         <script src="__UE__/ueditor.all.js"></script>
         <script src="__UE__/lang/zh-cn/zh-cn.js"></script>
@@ -116,7 +116,7 @@
                 UE.getEditor('extra-editor');
             });
         </script>
-        <script type="application/javascript" src="__JS__/Home/myShCircle.js"></script>
+        <script type="application/javascript" src="__JS__/Home/myShCircle.min.js"></script>
         <script type="application/javascript" src="__JS__/Home/main_articles.js"></script>
     </block>
 </block>
