修复不能批量删除的bug

--- a/trunk/Application/Home/View/default/Favorites/index.html
+++ b/trunk/Application/Home/View/default/Favorites/index.html
@@ -100,7 +100,7 @@
         <script type="application/javascript" src="__JS__/Home/user.js"></script>
         <script type="application/javascript" src="__JS__/Home/bind.js"></script>
         <script type="application/javascript" src="__JS__/Home/main_list.js"></script>
-        <script type="application/javascript" src="__JS__/Home/operate.js"></script>
+        <script type="application/javascript" src="__JS__/Home/operate-favorites.js"></script>
         <script type="application/javascript" src="__JS__/Home/dialog.js"></script>
     </block>
 </block>
