--- a/trunk/Application/Home/View/default/Index/index.html
+++ b/trunk/Application/Home/View/default/Index/index.html
@@ -75,7 +75,7 @@
         <script type="application/javascript" src="__JS__/Home/myShCircle.js"></script>
         <script type="application/javascript" src="__JS__/Home/user.js"></script>
         <script type="application/javascript" src="__JS__/Home/bind.js"></script>
-        <script type="application/javascript" src="__JS__/Home/main_list.js"></script>
-        <script type="application/javascript" src="__JS__/Home/operate.js"></script>
+        <script type="application/javascript" src="__JS__/Home/main_list_notes.js"></script>
+        <script type="application/javascript" src="__JS__/Home/operate-notes.js"></script>
     </block>
 </block>
