增加编辑笔记的功能

--- a/trunk/Application/Home/View/default/Index/list.html
+++ b/trunk/Application/Home/View/default/Index/list.html
@@ -113,7 +113,7 @@
                             </div>
                             <div class="file-name" style="width:60%">
                                 <div class="text">
-                                    <a href="{:U('Home/Article/openArticle','',false)}/aid/{$vol.id}" target="_blank" class="filename" title="{$vol.title_article}">{$vol.title_article}</a>
+                                    <a href="{:U('Home/Article/openArticle','',false)}/aid/{$vol.id}" target="_blank" article-cid="{$vol.id}" class="filename" date-article="article" title="{$vol.title_article}">{$vol.title_article}</a>
                                 </div>
                                 <div class="operate">
                                     <div class="button-box-mark" style="display:inline-block;*display:inline;*zoom:1;width:1px;height:1px;line-height:0;">
