--- a/trunk/Public/sass/Home/main_notes.scss
+++ b/trunk/Public/sass/Home/main_notes.scss
@@ -1922,7 +1922,7 @@ table {
 }
 
 .list-header-operatearea .list-tools {
-  margin-top:-11px;
+  //margin-top:-11px;
   z-index:2;
 }
 
@@ -2220,6 +2220,7 @@ table {
 .module-toolbar .list-tools {
   z-index:1;
   margin-left:5px;
+  margin-top: -10px;
 }
 
 .module-list .list-tools .g-dropdown-button,.module-list .list-tools a,.module-toolbar .list-tools .g-dropdown-button,.module-toolbar .list-tools a {
@@ -2228,6 +2229,7 @@ table {
 
 .module-list .list-tools a,.module-toolbar .list-tools a {
   border-radius:0;
+  margin-top: -10px;
 }
 
 .module-toolbar .list-tools>.g-button:nth-child(1) {
