调整分页器样式

--- a/trunk/Application/Home/View/default/Latest/list.html
+++ b/trunk/Application/Home/View/default/Latest/list.html
@@ -1,6 +1,6 @@
 <div node-type="module-list" class="module-list" style="min-height: 800px;height: auto">
     <div class="list-view-container" style="">
-        <div node-type="module-list-view" class="module-list-view" id="module-list" style="overflow-y: auto; height: 778px;">
+        <div node-type="module-list-view" class="module-list-view" id="module-list" style="overflow-y: auto; height: auto;">
             <div class="pages">
                 {$page}
             </div>
