--- a/trunk/Public/sass/Home/main_notes.scss
+++ b/trunk/Public/sass/Home/main_notes.scss
@@ -3029,3 +3029,11 @@ input::-ms-clear,.global-hide,.g-hide,.dialog-plugin-manage .dialog-footer,.g-dr
 .fileicon-sys-s-web {
   background: url(../../img/Common/Web_24_09682ee.png?__sprite) center no-repeat;
 }
+
+.pages{
+  text-align: right;
+  .num{
+    width: 30px;
+    text-align: center;
+  }
+}
