添加导入笔记功能

--- a/trunk/Application/Home/View/default/Index/index.html
+++ b/trunk/Application/Home/View/default/Index/index.html
@@ -41,6 +41,11 @@
                                     <!--<div id="shclFireballs"></div>-->
                                     <include file="Public/shCircle"/>
                                 </div>
+                                <div class="row">
+                                    <!--begin import_article-->
+                                    <include file="Public/import_article"/>
+                                    <!--end import_article-->
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -77,5 +82,6 @@
         <script type="application/javascript" src="__JS__/Home/bind.js"></script>
         <script type="application/javascript" src="__JS__/Home/main_list_notes.js"></script>
         <script type="application/javascript" src="__JS__/Home/operate-notes.js"></script>
+        <script type="application/javascript" src="__JS__/Home/upload-file.js"></script>
     </block>
 </block>
