--- a/trunk/Application/Home/View/default/Public/context_menu.html
+++ b/trunk/Application/Home/View/default/Public/context_menu.html
@@ -17,5 +17,6 @@
         <li id="rename-menu" data-check-display="true" data-group="5" class="" style="display: block;">重命名</li>
         <li id="delete-menu" data-check-display="true" data-group="5" class="" style="display: block;">删除</li>
         <li id="edit-menu" data-check-display="true" data-group="5" class="hidden" style="display: block;">编辑</li>
+        <li id="import-menu" data-check-display="true" data-group="5" class="" style="display: block;">导入笔记</li>
     </ul>
 </div>
