--- a/trunk/Application/Home/View/default/Public/import_article.html
+++ b/trunk/Application/Home/View/default/Public/import_article.html
@@ -7,13 +7,14 @@
                 <div class="modal-header">
                     <button type="button" class="close"data-dismiss="modal" aria-hidden="true">×</button>
                     <h4 class="modal-title">
-                        成员信息
+                        导入笔记
                     </h4>
                 </div>
 
                 <div class="modal-body">
                     <form enctype="multipart/form-data" action="{:U('Home/Article','',false)}/importArticle/cid/{$category_cid}" method="post">
                         <!--<input id="kv-explorer" type="file" multiple>-->
+                        <input type="input" name="cid" id="cid" multiple class="hidden" value="{$category_cid}"  />
                         <input type="file" name="uploadfile" id="uploadfile" multiple class="file-loading" />
                         <br>
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
